--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
 }
 
 .form input[type="text"] {
-    padding: 8px;
+    padding: 15px;
     border: 1px solid #ccc;
     width: 200px;
     text-align: center;
@@ -36,6 +36,7 @@ header {
     color: #fff;
     border: none;
     cursor: pointer;
+    display: center
 }
 
 .topnav {
