--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
     background-color: #0fbd1e;
     background-position: center;
     padding: 10px;
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -36,7 +36,7 @@ header {
     color: #fff;
     border: none;
     cursor: pointer;
-    margin-inline-end: auto;
+    margin-inline: auto;
 }
 
 .topnav {
