--- a/style.css
+++ b/style.css
@@ -31,14 +31,19 @@ header {
 }
 
 .form button[type="submit"] {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    margin-inline: auto;
-    display:inline-block
+        padding: 10px 20px;
+        background-color: dodgerblue;
+        border: 1px solid #ddd;
+        color: white;
+        cursor: pointer;
+        flex-direction: column;
+        align-items: end;
 }
+
+.form button:hover {
+    background-color: royalblue;
+  }
+
 
 .topnav {
     background-color: #0fbd1e;
