--- a/style.css
+++ b/style.css
@@ -33,11 +33,11 @@ header {
 .form button[type="submit"] {
         padding: 10px 20px;
         background-color: dodgerblue;
-        border: 1px solid #ddd;
         color: white;
         cursor: pointer;
         flex-direction: column;
         align-items: end;
+        margin-block-end: auto;
 }
 
 .form button:hover {
