--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
-/* style.css */
+*
+{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
 body {
     font-family: Open San, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #ffffff;
     background-size: contain;
+    background-position: center;
 }
 
 header {
@@ -54,7 +60,12 @@ header {
     display: inline-flex;
     list-style: none;
     color: #fff
-    float: right
+}
+
+.topnav ul li{
+    width: 120px;
+    margin: 15px;
+    padding: 15px;
 }
 
 .topnav ul a {
