--- a/style.css
+++ b/style.css
@@ -15,11 +15,10 @@ body {
 
 header {
     background-color: #0fbd1e;
-    background-position: center;
+    background-position: left;
     padding: 10px;
     display: inline-flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .home-icon svg {
